--- a/src/General/css/theme.css
+++ b/src/General/css/theme.css
@@ -74,7 +74,6 @@ html {
 #exlinks-options,
 #appchanx-settings,
 #qrtab,
-.post-form-style-float .qr-wrapper,
 input[type="submit"],
 input[value="Report"],
 span[style="left: 5px; position: absolute;"] a {
@@ -168,10 +167,16 @@ textarea.field:focus {
 #themeConf,
 #watcher,
 #watcher:hover,
+.announcements-slideout #globalMessage,
 .dialog,
+.post-form-style-float #qr,
+.post-form-decorations #qr,
 .submenu {
   background: #{theme["Dialog Background"]};
   border: 1px solid #{theme["Dialog Border"]};
+}
+#qp.dialog {
+  border: none;
 }
 .watch-thread-link {
   background-image: url("data:image/svg+xml,<svg viewBox='0 0 26 26' preserveAspectRatio='true' xmlns='http://www.w3.org/2000/svg'><path fill='#{theme["Post Numbers"].replace '#', '%23'}' d='M24.132,7.971c-2.203-2.205-5.916-2.098-8.25,0.235L15.5,8.588l-0.382-0.382c-2.334-2.333-6.047-2.44-8.25-0.235c-2.204,2.203-2.098,5.916,0.235,8.249l8.396,8.396l8.396-8.396C26.229,13.887,26.336,10.174,24.132,7.971z'/></svg>");
@@ -399,14 +404,6 @@ a .name {
 .sage-highlighting-text.sage-highlight-position-after a.useremail[href*="SAGE"]:last-of-type::after {
   content: " (sage) ";
   color: #{theme["Sage"]};
-}
-.announcements-slideout #globalMessage {
-  background: #{theme["Dialog Background"]};
-  border: 1px solid #{theme["Dialog Border"]};
-}
-.post-form-decorations .qr-wrapper {
-  background: #{backgroundC};
-  border: 1px solid #{theme["Buttons Border"]};
 }
 .quote-shadows #qr {
   box-shadow: 5px 5px 5px #{theme['Shadow Color']};
