Let's be better than we are Should fix some padding issues, optimize theme editting, and a bit of other stuff that's hard to remember.

--- a/src/General/css/padding.nav.css
+++ b/src/General/css/padding.nav.css
@@ -7,9 +7,9 @@ body {
 .fourchan-ss-navigation.fixed.bottom:not(.autohide) body::before {
   bottom: #{Style.padding.nav.offsetHeight}px;
 }
-.fourchan-ss-navigation.top:not(.autohide) body {
+.top:not(.autohide) body {
   padding-top: #{Style.padding.nav.offsetHeight + 1}px;
 }
-.fourchan-ss-navigation.bottom:not(.autohide) body {
+.bottom:not(.autohide) body {
   padding-bottom: #{Style.padding.nav.offsetHeight + 1}px;"
 }
