--- a/src/General/css/padding.pages.css
+++ b/src/General/css/padding.pages.css
@@ -6,11 +6,11 @@
 .fourchan-ss-navigation.index.pagination-bottom body::before {
   bottom: #{Style.padding.pages.offsetHeight}px;
 }
-.fourchan-ss-navigation.index.pagination-sticky-top body,
-.fourchan-ss-navigation.index.pagination-top body {
+.index.pagination-sticky-top body,
+.index.pagination-top body {
   padding-top: #{Style.padding.pages.offsetHeight + 1}px;
 }
-.fourchan-ss-navigation.index.pagination-sticky-bottom body,
-.fourchan-ss-navigation.index.pagination-bottom body {
+.index.pagination-sticky-bottom body,
+.index.pagination-bottom body {
   padding-bottom: #{Style.padding.pages.offsetHeight + 1}px;
 }
