No pointer events for scroll marker

--- a/src/General/css/style.css
+++ b/src/General/css/style.css
@@ -171,6 +171,7 @@ a {
   right: 0;
   height: 10px;
   position: absolute;
+  pointer-events: none;
 }
 #header-bar #scroll-marker {
   display: none;
