--- a/src/General/css/style.css
+++ b/src/General/css/style.css
@@ -171,6 +171,8 @@ a {
   right: 0;
   height: 10px;
   position: absolute;
+}
+:root:not(.autohide) #scroll-marker {
   pointer-events: none;
 }
 #header-bar #scroll-marker {
