Fix EXIF hiding on /p/ https://boards.4chan.org/g/res/35546097#p35549918

--- a/src/General/css/layout.css
+++ b/src/General/css/layout.css
@@ -29,7 +29,8 @@ body > hr {
 #qr-thread-select:empty {
   display: none;
 }
-/* File Name Trunctuate */
+/* File Name Trunctuate / /p/ exif */
+.exif,
 .fileText:hover .fntrunc,
 .fileText:not(:hover) .fnfull {
   display: none;
