Follow upstream and remove ".webkit" in favor of ".blink"

--- a/src/General/css/style.css
+++ b/src/General/css/style.css
@@ -762,7 +762,7 @@ input.field.tripped:not(:hover):not(:focus) {
   width: 25%;
   vertical-align: top;
 }
-:root.webkit #qr [type='submit'] {
+:root.blink #qr [type='submit'] {
   height: 24px;
 }
 /* Fake File Input */
@@ -932,7 +932,7 @@ a:only-of-type > .remove {
 .textarea {
   position: relative;
 }
-:root.webkit .textarea {
+:root.blink .textarea {
   margin-bottom: -2px;
 }
 #char-count {
