--- a/src/General/css/style.css
+++ b/src/General/css/style.css
@@ -39,7 +39,7 @@
   overflow: hidden;
 }
 label,
-.watcher-toggler {
+.watch-thread-link {
   cursor: pointer;
 }
 a[href="javascript:;"] {
@@ -508,7 +508,7 @@ a.hide-announcement {
   top: 0px;
   padding: 0px 4px;
 }
-.watcher-toggler {
+.watch-thread-link {
   padding-top: 18px;
   width: 18px;
   height: 0px;
@@ -518,7 +518,7 @@ a.hide-announcement {
   position: relative;
   top: 1px;
 }
-.watcher-toggler.watched {
+.watch-thread-link.watched {
   opacity: 1;
 }
 
