Give the #updater and #stats a z-index

--- a/src/General/css/layout.css
+++ b/src/General/css/layout.css
@@ -368,6 +368,7 @@ th {
 .float #thread-stats,
 .float #updater {
   position: fixed;
+  z-index: 25;
 }
 #update-status.new::after {
   content: ', ';
