Fix #305 Thanks Anonymous <3

--- a/src/General/css/dynamic.css
+++ b/src/General/css/dynamic.css
@@ -1,5 +1,6 @@
 #boardNavDesktopFoot a,
 #header-bar a,
+#header-bar .shortcut > span,
 .deleteform::before,
 .field,
 .hide-navigation-decorations .pages a,
