Fix #432 For the time being, Mascots have been removed from all none-board pages (excluding Catalog, which is *technically* a board page, and can already be changed at the users discretion)

--- a/src/General/css/layout.css
+++ b/src/General/css/layout.css
@@ -2203,7 +2203,7 @@ article li {
   padding: 0 10px;
 }
 .yuimenuitem,
-.boxcontent li {
+.boxcontent ul > li {
   list-style-type: none;
 }
 .boxbar {
