--- a/src/General/css/icons.base.css
+++ b/src/General/css/icons.base.css
@@ -1,30 +1,35 @@
 #main-menu,
-body > div.navLinks > a:first-of-type::after,
-.slideout-watcher #sowIcon,
-.announcements-slideout #psaIcon,
+#returnIcon,
+#sowIcon,
+#psaIcon,
 #slideNav,
 #img-controls,
 #catalog,
-#fappeTyme {
+#fappeTyme,
+.shortcut .icon {
   z-index: 18;
   display: inline-block;
   width: 15px;
   height: 15px;
   content: "";
   opacity: 0.5;
+  cursor: pointer;
 }
 .invisible-icons #main-menu,
-.invisible-icons body > div.navLinks > a:first-of-type::after,
-.invisible-icons.slideout-watcher #sowIcon,
-.invisible-icons.announcements-slideout #psaIcon,
+.invisible-icons #returnIcon,
+.invisible-icons #sowIcon,
+.invisible-icons #psaIcon,
 .invisible-icons #slideNav,
 .invisible-icons #img-controls,
 .invisible-icons #catalog,
-.invisible-icons #fappeTyme {
+.invisible-icons #fappeTyme,
+.invisible-icons #navPrev,
+.invisible-icons #navNext,
+.invisible-icons .shortcut .icon {
   opacity: 0;
 }
 #navtopright .exlinksOptionsLink,
-body > div.navLinks > a:first-of-type,
+#returnIcon,
 #{if Conf['Slideout Watcher'] then '#thread-watcher,' else ''}
 #{if Conf['Announcements'] is 'slideout' then '#globalMessage,' else ''}
 #boardNavDesktopFoot,
@@ -32,27 +37,24 @@ body > div.navLinks > a:first-of-type,
   z-index: 16;
 }
 #navtopright .exlinksOptionsLink:hover,
-body > div.navLinks > a:first-of-type:hover,
-.slideout-watcher #thread-watcher:hover,
-.announcements-slideout #globalMessage:hover,
+#returnIcon:hover,
+#thread-watcher:hover,
+#globalMessage:hover,
 #slideNav:hover,
 #img-controls,
 #catalog:hover {
   z-index: 17;
 }
 #main-menu {
-  visibility: visible;
   background-position: 0 0;
-  cursor: pointer;
 }
-body > div.navLinks > a:first-of-type::after {
-  cursor: pointer;
+#returnIcon {
   background-position: 0 -15px;
 }
-.slideout-watcher #sowIcon {
+#sowIcon {
   background-position: 0 -30px;
 }
-.announcements-slideout #psaIcon {
+#psaIcon {
   background-position: 0 -45px;
 }
 #slideNav {
@@ -61,27 +63,25 @@ body > div.navLinks > a:first-of-type::after {
 #img-controls {
   background-position: 0 -90px;
 }
-#navtopright .exlinksOptionsLink::after {
-  background-position: 0 -105px;
-}
 #catalog {
-  visibility: visible;
   background-position: 0 -120px;
 }
 #fappeTyme {
   background-position: 0 -135px;
 }
 #slideNav:hover,
-.announcements-slideout #psaIcon:hover,
+#psaIcon:hover,
 #img-controls:hover,
-#navlinks a:hover,
+#navPrev:hover,
+#navNext:hover,
 #appchanOptions:hover,
 #main-menu:hover,
 #qr #qrtab,
-.slideout-watcher #sowIcon:hover,
+#sowIcon:hover,
 .thumbnail#selected,
-div.navLinks > a:first-of-type:hover::after,
-#catalog:hover::after,
-#fappeTyme:hover {
+#returnIcon:hover,
+#catalog:hover,
+#fappeTyme:hover,
+.shortcut .icon:hover {
   opacity: 1 !important;
 }
